tests/functional/lang/parse-fail-eof-pos.err.exp
error: syntax error, unexpected end of file, expecting expression
       at «stdin»:3:1:
            2| # no content
            3|
             | ^
